# BetaCraft-Launcher-Java

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  assets.qrc  main.cpp
Core/: Core.c  Core.h  Instances.c  Instances.h  Logger.c
